--- a/app/src/main/res/layout/rv_stock_item.xml
+++ b/app/src/main/res/layout/rv_stock_item.xml
@@ -30,7 +30,7 @@
             <TextView
                 android:id="@+id/tvName"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
                 android:textColor="@color/black"
@@ -55,7 +55,7 @@
             <TextView
                 android:id="@+id/tvAmount"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
                 android:textColor="@color/black"
